:art: complete title align :bug: why h tag igonres block when it is blank?

--- a/src/pages/CreatePage/sub/ThumbnailTitle.module.scss
+++ b/src/pages/CreatePage/sub/ThumbnailTitle.module.scss
@@ -2,8 +2,6 @@
 @import '../../../fonts/Font-Face.module.scss';
 
 .title {
-	justify-content: center;
-	align-self: flex-end;
 	padding: toRem(10);
 	margin: 0 0 toRem(10) toRem(10);
 	
@@ -17,6 +15,7 @@
 	.title--main {
 		font-weight: 400;
 		font-size: toRem(40);
+		margin: initial;
 		
 		&::before {
 			content:"제목을 입력하세요"
@@ -26,8 +25,10 @@
 	.title--sub {
 		font-weight: 200;
 		font-size: toRem(25);
+		margin: initial;
+		margin-top: toRem(20);
 		&::before {
-			content:"부제목을 입력하세요"
+			content:"부제목을 입력하세요";
 		}
 	}
 	
@@ -36,4 +37,20 @@
 			content: "" !important;
 		}
 	}
+}
+
+.left {
+	align-self: flex-end;
+	text-align: left;
+}
+.center {
+	align-self: center;
+	margin: 0 auto 0;
+	text-align: center;
+}
+
+.right {
+	align-self: flex-start;
+	margin: toRem(10) toRem(10) 0 auto;
+	text-align: right;
 }
